--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "sonner": "^2.0.5",
     "zustand": "^5.0.5"
   },
